--- a/SBPplus/src/main/view/static/css/index/index.css
+++ b/SBPplus/src/main/view/static/css/index/index.css
@@ -115,9 +115,13 @@
     background: #00a2e9;
 }
 #logo {
-    width: 20px;
+    width: 30px;
 }
 #logoDiv{
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
+
+#backImage{
+    height: 200px;
+}
