--- a/SBPplus/src/main/view/static/css/index/index_lg.css
+++ b/SBPplus/src/main/view/static/css/index/index_lg.css
@@ -78,7 +78,9 @@
         background: rgba(0, 0, 0, 0.2);
 
     }
-
+    #backImage{
+        height: 700px;
+    }
     #xiangmuyuyue input, #xiangmuyuyue select {
         background: rgb(50, 50, 50);
         border: solid rgb(50, 50, 50);
