--- a/SBPplus/src/main/view/templates/index.html
+++ b/SBPplus/src/main/view/templates/index.html
@@ -3,16 +3,51 @@
 <head th:include="plugins/include_javascript::js"></head>
 <body style="overflow-x:hidden" id="body">
 <div class="container-fluid" style="text-align: center;">
+    <!--导航条-->
+    <div class="row" style="text-align: center;" id="nav">
+        <div class="visible-xs col-xs-1 col-xs-push-10 dropdown" style="position: fixed;top: 20px;z-index: 2;">
+            <img th:src="@{/images/index/liebiao.png}" class="dropdown-toggle" data-toggle="dropdown"  style="width: 25px;" id="liebiao"/>
+            <ul class="dropdown-menu" style="background: black;">
+                <li><nobr><a href="/">首页</a></nobr></li>
+                <li><nobr><a href="http://www.baidu.com">服务</a></nobr></li>
+                <li><nobr><a >关于</a></nobr></li>
+                <li><nobr><a th:href="@{/loginUrl}">登陆</a></nobr></li>
+                <li><nobr><a>注册</a></nobr></li>
+            </ul>
+        </div>
+        <!--导航条-->
+        <div  class="col-xs-3 col-xs-push-9 hidden-xs " style="position: fixed;top: 20px;z-index: 2;">
+            <div class="col-xs-12">
+                <div class="col-xs-2">
+                    <nobr><a href="/">首页</a></nobr>
+                </div>
+                <div class="col-xs-2">
+                    <nobr><a>服务</a></nobr>
+                </div>
+                <div class="col-xs-2">
+                    <nobr><a>关于</a></nobr>
+                </div>
+                <div class="col-xs-2">
+                    <nobr><a th:href="@{/loginUrl}">登陆</a></nobr>
+                </div>
+                <div class="col-xs-2">
+                    <nobr><a>注册</a></nobr>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--千里码logo-->
     <div class="row">
         <div class="col-md-12 ">
             <div class="row">
-                <div id="logoDiv" class="col-xs-1 col-xs-push-1" style="z-index:99;position: absolute;">
+                <div id="logoDiv" class="col-xs-1 col-xs-push-1" style="z-index:1;position: absolute;">
                     <img th:src="@{/images/index/myLogo.png}"  id="logo"/>
                 </div>
             </div>
             <img id="backImage"  class="img-responsive" th:src="@{/images/index/b1.jpg}"/>
         </div>
     </div>
+    <!--公司标题-->
     <div class="row">
         <div class="col-md-12 ">
             <div id="companyTitle">
@@ -169,7 +204,6 @@
         </div>
     </div>
     <!--服务流程-->
-
     <div class="row"><!--服务流程-->
         <div class="col-xs-12 col-sm-6 col-sm-push-3" id="buzhou" style="padding: 15px;">
             <div class="col-xs-3"><img th:src="@{/images/index/buzhou8.png}"/></div>
@@ -198,7 +232,7 @@
                         </select>
                         <input class="form-control" type="text" id="phone" name="phone" placeholder="输入您的手机号"/>
                         <input class="form-control" type="text" id="code" name="code" placeholder="请输入验证码"/>
-                        <img src="/defaultKaptcha" style="border-radius: 5px" id="rand" name="rand" alt="验证码"/>
+                        <img th:src="@{/defaultKaptcha}" style="border-radius: 5px" id="rand" name="rand" alt="验证码"/>
                         <button class="form-control" type="submit">立即获取方案
                         </button>
 
@@ -239,12 +273,13 @@
         </div>
     </div>
     <!--预约表单-->
-
+    <div th:include="plugins/footer::footer"></div>
 
 </div>
 </body>
 <script type="text/javascript" th:src="@{/js/index.js}"></script>
-
+<script type="text/javascript" th:src="@{/js/qlm.js}"></script>
+<link rel="stylesheet" type="text/css" th:href="@{/css/qlm.css}"/>
 <link rel="stylesheet" type="text/css" th:href="@{/css/index/index.css}"/>
 <link rel="stylesheet" type="text/css" th:href="@{/css/index/index_sm.css}"/>
 <link rel="stylesheet" type="text/css" th:href="@{/css/index/index_md.css}"/>
