--- a/SBPplus/src/main/view/templates/interceptor_error.html
+++ b/SBPplus/src/main/view/templates/interceptor_error.html
@@ -6,7 +6,7 @@
 
     <div class="row" >
         <div class="col-xs-10 col-xs-push-1 col-sm-6 col-sm-push-3">
-            <div class="panel panel-danger">
+            <div class="panel panel-danger" style="text-align: center">
                 <div class="panel-heading" >非法访问！我是有安全验证的!</div>
                 <div class="panel-body">
                     <div style="text-align: center">
@@ -18,7 +18,7 @@
                     </div>
 
                 </div>
-                <div class="panel-footer"><button class="btn btn-success" id="bt">回到首页</button></div>
+                <div class="panel-footer" ><button class="btn btn-success" id="bt">回到首页</button></div>
             </div>
         </div>
     </div>
