--- a/SBPplus/src/main/view/templates/errors.html
+++ b/SBPplus/src/main/view/templates/errors.html
@@ -11,7 +11,7 @@
                 <div class="panel-body">
                     <div style="text-align: center">
                         <nobr >
-                            您没有此权限！
+                            <p th:text="${exception}"></p>
                         </nobr>
 
                     </div>
