--- a/SBPplus/src/main/view/templates/index.html
+++ b/SBPplus/src/main/view/templates/index.html
@@ -89,7 +89,7 @@
         <div class="col-md-12 ">
             <div id="fengexian" style="height: 5px;background: #00a2e9;">
             </div>
-            <div  class="font2" id="youshi" style="max-width: 100%;background: white;font-family: '黑体'">
+            <div   id="youshi" style="max-width: 100%;background: white;font-size:5rem">
                 <div style="position: relative;margin: auto;top: 50%;transform: translateY(-50%)">行业领先优势</div>
             </div>
 
@@ -181,7 +181,7 @@
     <div class="row" id="service">
         <div class="col-xs-12 "
              style=" background-image: url('../images/index/b3.jpg');" id="ourService">
-            <div class="col-xs-12 font2" id="myservice">我们能开发的项目</div>
+            <div class="col-xs-12" id="myservice" style="font-size:5rem">我们能开发的项目</div>
             <div id="goClaim">
                 <div>
                     <div class="col-xs-4 col-md-5 "><img th:src="@{/images/index/wangzhanjianshe.png}"/>
@@ -243,7 +243,7 @@
 
     </div><!--手机界面显示服务内容-->
     <hr/>
-    <div id="myservice" class="font2">服务流程</div>
+    <div id="myservice" style="font-size:5rem">服务流程</div>
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-sm-push-3" id="buzhou" style="padding: 15px;">
             <div class="col-xs-3"><img th:src="@{/images/index/buzhou1.png}"/></div>
